--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="header">
         <span class="material-symbols-outlined" style="color: white;cursor:pointer" onclick="showData()">finance</span>
-        <span style="font-size: 80px; color: black; font-family: 'Scrabbles';">WordleIBC</span>
+        <span style="font-size: 80px; color: #0f0; font-family: 'Scrabbles';">WordleIBC</span>
         <div>
             <span class="material-symbols-outlined" style="color: white;cursor:pointer">restart_alt</span>
             <span class="material-symbols-outlined" style="color: white; cursor:pointer" onclick="showInfo()">help</span>
